---------------------------------------------------------------------------------------------------
Version: 0.3.27
Date: 2025-08-08
  Features:
    - Added processing of xenotime and djerfisherite
    - Added more data cards
  Changes:
    - Changed many tech tree dependancies for tier 3 science packs
  Bugfixes:
    - Landfill can be now placed on coast water
---------------------------------------------------------------------------------------------------
Version: 0.3.26
Date: 2025-08-01
  Features:
    - Added recipe chains for biolab
    - Added data cards for automation and chemical science 3
    - Added terbium recipe chain
    - Added ytterbium recipe chain
    - Added additional cargo landing pad technology
    - Added methane and carbon dioxide from atmosphere recipes
  Changes:
    - BREAKING CHANGE: advanced chemical plant now has 6 inputs and outputs instead of 3
    - Buldings can not not be crafted with productivity
  Bugfixes:
    - Fixed some icons
    - Fixed some tech tree dependancies
    - Biolab is now unlocked before automation science pack 3
---------------------------------------------------------------------------------------------------
Version: 0.3.25
Date: 2025-07-25
  Features:
    - Added dysprosium recipe chain
    - Added new ruthenium alloys
    - Added recipe for core extractor
  Changes:
    - Removed noble gases tech and replaced with helium
    - Changed helium recipe ratios
    - Ruthenium powder produced in electrolysis plant
    - Krypton asteroid is now much further away from the sun
  Bugfixes:
    - Fixed working animation of greenhouse
    - Fixed pipe covers for incinerator
    - Platium group metal concentrate is now made in chemical plant
    - Ball bearing technology now requires automation 2
---------------------------------------------------------------------------------------------------
Version: 0.3.24
Date: 2025-07-18
  Changes:
    - BREAKING CHANGE: Filtration plant now has 6 inputs instead of 2