@@ -4,7 +4,10 @@ Date: 2025-08-08
   Features:
     - Added processing of xenotime and djerfisherite
     - Added more data cards
+    - Added geological science pack 3 recipe chain
+    - Added logistic science pack 3 recipe chain
   Changes:
+    - Logistics 3 (blue belts) unlocked after logistical science pack 2
     - Changed many tech tree dependancies for tier 3 science packs
   Bugfixes:
     - Landfill can be now placed on coast water
